# astarte

./: .adr-dir.license  .credo.exs  .dockerignore  .dprint.json  .env  .formatter.exs  .gitignore  .gitlab-ci.yml  .release-please-manifest.json  .tool-versions  .tool-versions.license  .travis.yml  .typos.toml  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  codecov.yaml  codecov.yml  committed.toml  compose.env  compose.env.license  docker-compose.dev.yml  docker-compose.yml  flake.lock.license  flake.nix  generate-astarte-credentials  generate-astarte-device-id  generate-compose-files.sh  mix.exs  release-please-config.json  renovate.json  shell.nix  supervisor.conf
.github/: codecov.yml  dco.yml  labeler.yml  pull_request_template.md  pull_request_template.md.license
.reuse/: dep5
astarte-dashboard/: .babelrc  .dockerignore  .eslintrc.json  .gitignore  .gitlab-ci.yml  .tool-versions  .travis.yml  AUTHORS.md  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  brunch-config.js  config.json.template  cypress.config.ts  cypress.json  default.conf  elm-analyse.json  elm-package.json  elm.json  index.html  package-lock.json  package.json  postcss.config.js  set-dashboard-config.sh  (+6 more)
tools/astarte-e2e-next/: Cargo.toml  Dockerfile  README.md  flake.nix
tools/astarte-e2e-next/astarte-e2e/: Cargo.toml
tools/astarte-e2e-next/astarte-e2e-cli/: Cargo.toml
tools/astarte-e2e-next/astarte-e2e-cli/src/: config.rs  interfaces.rs  main.rs
tools/astarte-e2e-next/astarte-e2e-cli/src/interfaces/device/: individual_datastream.rs
tools/astarte-e2e-next/astarte-e2e/interfaces/: org.astarte-platform.e2e.CustomDeviceDatastream.json  org.astarte-platform.e2e.DeviceAggregate.json  org.astarte-platform.e2e.DeviceDatastream.json  org.astarte-platform.e2e.ForUpdateDeviceDatastream.json  org.astarte-platform.e2e.ForUpdateDeviceProperty.json  org.astarte-platform.e2e.ServerAggregate.json
tools/astarte-e2e-next/astarte-e2e/interfaces/additional/: org.astarte-platform.e2e.DeviceProperty.json  org.astarte-platform.e2e.ServerDatastream.json  org.astarte-platform.e2e.ServerProperty.json
tools/astarte-e2e-next/astarte-e2e/interfaces/update/: org.astarte-platform.e2e.ForUpdateDeviceDatastream.json  org.astarte-platform.e2e.ForUpdateDeviceProperty.json
tools/astarte-e2e-next/astarte-e2e/src/: astarte.rs  astarte_event.rs  interfaces.rs  lib.rs  tls.rs  transport.rs
tools/astarte-e2e-next/astarte-e2e/src/interfaces/: device.rs
tools/astarte-e2e-next/astarte-e2e/src/interfaces/device/: individual_datastream.rs
tools/astarte-e2e-next/astarte-e2e/src/transport/: phoenix_channel.rs
(+3246 files in other folders)
