# This file is part of Astarte.
#
# Copyright 2026 SECO Mind Srl
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "astarte-e2e-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
astarte-device-sdk.workspace = true
astarte-e2e.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
color-eyre.workspace = true
eyre.workspace = true
reqwest = { workspace = true, features = ["json"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
